--- a/doc/trend_formulas.Rmd
+++ b/doc/trend_formulas.Rmd
@@ -23,7 +23,7 @@ knitr::opts_chunk$set(
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(
   echo = TRUE,   
-  dpi = 150,
+  dpi = 100,
   fig.asp = 0.8,
   fig.width = 6,
   out.width = "60%",
@@ -97,14 +97,6 @@ Note that we have z-scored the counts in this example as that will make it easie
 plot_mvgam_series(data = plankton_data, series = 'all')
 ```
 
-It is always helpful to check the data for `NA`s before attempting any models:
-```{r}
-image(is.na(t(plankton_data)), axes = F,
-      col = c('grey80', 'darkred'))
-axis(3, at = seq(0,1, len = NCOL(plankton_data)), 
-     labels = colnames(plankton_data))
-```
-
 We have some missing observations, but this isn't an issue for modelling in `mvgam`. A useful property to understand about these counts is that they tend to be highly seasonal. Below are some plots of z-scored counts against the z-scored temperature measurements in the lake for each month:
 ```{r}
 plankton_data %>%
@@ -133,20 +125,6 @@ plankton_data %>%
   ylab('z-score') +
   xlab('Time') +
   ggtitle('Temperature (black) vs Diatoms (red)')
-```
-
-```{r}
-plankton_data %>%
-  dplyr::filter(series == 'Greens') %>%
-  ggplot(aes(x = time, y = temp)) +
-  geom_line(size = 1.1) +
-  geom_line(aes(y = y), col = 'white',
-            size = 1.3) +
-  geom_line(aes(y = y), col = 'darkred',
-            size = 1.1) +
-  ylab('z-score') +
-  xlab('Time') +
-  ggtitle('Temperature (black) vs Greens (red)')
 ```
 
 We will have to try and capture this seasonality in our process model, which should be easy to do given the flexibility of GAMs. Next we will split the data into training and testing splits:
@@ -192,25 +170,13 @@ The "global" tensor product smooth function can be quickly visualized:
 plot_mvgam_smooth(notrend_mod, smooth = 1)
 ```
 
-On this plot, red indicates below-average linear predictors and white indicates above-average. We can then plot the deviation smooths for each algal group to see how they vary from the "global" pattern:
+On this plot, red indicates below-average linear predictors and white indicates above-average. We can then plot the deviation smooths for a few algal groups to see how they vary from the "global" pattern:
 ```{r}
 plot_mvgam_smooth(notrend_mod, smooth = 2)
 ```
 
 ```{r}
 plot_mvgam_smooth(notrend_mod, smooth = 3)
-```
-
-```{r}
-plot_mvgam_smooth(notrend_mod, smooth = 4)
-```
-
-```{r}
-plot_mvgam_smooth(notrend_mod, smooth = 5)
-```
-
-```{r}
-plot_mvgam_smooth(notrend_mod, smooth = 6)
 ```
 
 These multidimensional smooths have done a good job of capturing the seasonal variation in our observations:
@@ -226,15 +192,7 @@ plot(notrend_mod, type = 'forecast', series = 2)
 plot(notrend_mod, type = 'forecast', series = 3)
 ```
 
-```{r}
-plot(notrend_mod, type = 'forecast', series = 4)
-```
-
-```{r}
-plot(notrend_mod, type = 'forecast', series = 5)
-```
-
-This basic model gives us confidence that we can capture the seasonal variation in the observations. But the model has not captured the remaining temporal dynamics, which is obvious when we inspect Dunn-Smyth residuals for each series:
+This basic model gives us confidence that we can capture the seasonal variation in the observations. But the model has not captured the remaining temporal dynamics, which is obvious when we inspect Dunn-Smyth residuals for a few series:
 ```{r}
 plot(notrend_mod, type = 'residuals', series = 1)
 ```
@@ -247,13 +205,6 @@ plot(notrend_mod, type = 'residuals', series = 2)
 plot(notrend_mod, type = 'residuals', series = 3)
 ```
 
-```{r}
-plot(notrend_mod, type = 'residuals', series = 4)
-```
-
-```{r}
-plot(notrend_mod, type = 'residuals', series = 5)
-```
 
 ### Multiseries dynamics
 Now it is time to get into multivariate State-Space models. We will fit two models that can both incorporate lagged cross-dependencies in the latent process models. The first model assumes that the process errors operate independently from one another, while the second assumes that there may be contemporaneous correlations in the process errors. Both models include a Vector Autoregressive component for the process means, and so both can model complex community dynamics. The models can be described mathematically as follows:
@@ -280,7 +231,7 @@ priors <- get_mvgam_priors(
     te(temp, month, k = c(4, 4), by = trend),
   
   # VAR1 model with uncorrelated process errors
-  trend_model = 'VAR1',
+  trend_model = VAR(),
   family = gaussian(),
   data = plankton_train)
 ```
@@ -314,8 +265,9 @@ var_mod <- mvgam(y ~ -1,
                  family = gaussian(),
                  data = plankton_train,
                  newdata = plankton_test,
-                 trend_model = 'VAR1',
+                 trend_model = VAR(),
                  priors = priors, 
+                 adapt_delta = 0.99,
                  burnin = 1000)
 ```
 
@@ -329,13 +281,14 @@ var_mod <- mvgam(
     te(temp, month, k = c(4, 4), by = trend),
   
   # VAR1 model with uncorrelated process errors
-  trend_model = 'VAR1',
+  trend_model = VAR(),
   family = gaussian(),
   data = plankton_train,
   newdata = plankton_test,
   
   # include the updated priors
-  priors = priors)
+  priors = priors,
+  silent = 2)
 ```
 
 ### Inspecting SS models
@@ -349,12 +302,7 @@ The convergence of this model isn't fabulous (more on this in a moment). But we 
 plot(var_mod, 'smooths', trend_effects = TRUE)
 ```
 
-The VAR matrix is of particular interest here, as it captures lagged dependencies and cross-dependencies in the latent process model:
-```{r warning=FALSE, message=FALSE}
-mcmc_plot(var_mod, variable = 'A', regex = TRUE, type = 'hist')
-```
-
-Unfortunately `bayesplot` doesn't know this is a matrix of parameters so what we see is actually the transpose of the VAR matrix. A little bit of wrangling gives us these histograms in the correct order:
+The VAR matrix is of particular interest here, as it captures lagged dependencies and cross-dependencies in the latent process model. Unfortunately `bayesplot` doesn't know this is a matrix of parameters so what we see is actually the transpose of the VAR matrix. A little bit of wrangling gives us these histograms in the correct order:
 ```{r warning=FALSE, message=FALSE}
 A_pars <- matrix(NA, nrow = 5, ncol = 5)
 for(i in 1:5){
@@ -367,15 +315,8 @@ mcmc_plot(var_mod,
           type = 'hist')
 ```
 
-There is a lot happening in this matrix. Each cell captures the lagged effect of the process in the column on the process in the row in the next timestep. So for example, the effect in cell [1,3], which is quite strongly negative, means that an *increase* in the process for series 3 (Greens) at time $t$ is expected to lead to a subsequent *decrease* in the process for series 1 (Bluegreens) at time $t+1$. The latent process model is now capturing these effects and the smooth seasonal effects, so the trend plot shows our best estimate of what the *true* count should have been at each time point:
-```{r}
-plot(var_mod, type = 'trend', series = 1)
-```
-
-```{r}
-plot(var_mod, type = 'trend', series = 3)
-```
-
+There is a lot happening in this matrix. Each cell captures the lagged effect of the process in the column on the process in the row in the next timestep. So for example, the effect in cell [1,3] shows how an *increase* in the process for series 3 (Greens) at time $t$ is expected to impact the process for series 1 (Bluegreens) at time $t+1$. The latent process model is now capturing these effects and the smooth seasonal effects.
+  
 The process error $(\Sigma)$ captures unmodelled variation in the process models. Again, we fixed the off-diagonals to 0, so the histograms for these will look like flat boxes:
 ```{r warning=FALSE, message=FALSE}
 Sigma_pars <- matrix(NA, nrow = 5, ncol = 5)
@@ -417,8 +358,9 @@ varcor_mod <- mvgam(y ~ -1,
                  family = gaussian(),
                  data = plankton_train,
                  newdata = plankton_test,
-                 trend_model = 'VAR1cor',
+                 trend_model = VAR(cor = TRUE),
                  burnin = 1000,
+                 adapt_delta = 0.99,
                  priors = priors)
 ```
 
@@ -432,21 +374,14 @@ varcor_mod <- mvgam(
     te(temp, month, k = c(4, 4), by = trend),
   
   # VAR1 model with correlated process errors
-  trend_model = 'VAR1cor',
+  trend_model = VAR(cor = TRUE),
   family = gaussian(),
   data = plankton_train,
   newdata = plankton_test,
   
   # include the updated priors
-  priors = priors)
-```
-
-Plot convergence diagnostics for the two models, which shows that both models display similar levels of convergence:
-```{r warning=FALSE, message=FALSE}
-mcmc_plot(varcor_mod, type = 'rhat') +
-  labs(title = 'VAR1cor')
-mcmc_plot(var_mod, type = 'rhat') +
-  labs(title = 'VAR1')
+  priors = priors,
+  silent = 2)
 ```
 
 The $(\Sigma)$ matrix now captures any evidence of contemporaneously correlated process error:
@@ -462,7 +397,7 @@ mcmc_plot(varcor_mod,
           type = 'hist')
 ```
 
-This symmetric matrix tells us there is support for correlated process errors. For example, series 1 and 3 (Bluegreens and Greens) show negatively correlated process errors, while series 1 and 4 (Bluegreens and Other.algae) show positively correlated errors. But it is easier to interpret these estimates if we convert the covariance matrix to a correlation matrix. Here we compute the posterior median process error correlations:
+This symmetric matrix tells us there is support for correlated process errors, as several of the off-diagonal entries are strongly non-zero. But it is easier to interpret these estimates if we convert the covariance matrix to a correlation matrix. Here we compute the posterior median process error correlations:
 ```{r}
 Sigma_post <- as.matrix(varcor_mod, variable = 'Sigma', regex = TRUE)
 median_correlations <- cov2cor(matrix(apply(Sigma_post, 2, median),
@@ -472,45 +407,7 @@ rownames(median_correlations) <- colnames(median_correlations) <- levels(plankto
 round(median_correlations, 2)
 ```
 
-Because this model is able to capture correlated errors, the VAR matrix has changed slightly:
-```{r warning=FALSE, message=FALSE}
-A_pars <- matrix(NA, nrow = 5, ncol = 5)
-for(i in 1:5){
-  for(j in 1:5){
-    A_pars[i, j] <- paste0('A[', i, ',', j, ']')
-  }
-}
-mcmc_plot(varcor_mod, 
-          variable = as.vector(t(A_pars)), 
-          type = 'hist')
-```
-
-We still have some evidence of lagged cross-dependence, but some of these interactions have now been pulled more toward zero. But which model is better? Forecasts don't appear to differ very much, at least qualitatively (here are forecasts for three of the series, for each model):
-```{r}
-plot(var_mod, type = 'forecast', series = 1, newdata = plankton_test)
-```
-
-```{r}
-plot(varcor_mod, type = 'forecast', series = 1, newdata = plankton_test)
-```
-
-```{r}
-plot(var_mod, type = 'forecast', series = 2, newdata = plankton_test)
-```
-
-```{r}
-plot(varcor_mod, type = 'forecast', series = 2, newdata = plankton_test)
-```
-
-```{r}
-plot(var_mod, type = 'forecast', series = 3, newdata = plankton_test)
-```
-
-```{r}
-plot(varcor_mod, type = 'forecast', series = 3, newdata = plankton_test)
-```
-
-We can compute the variogram score for out of sample forecasts to get a sense of which model does a better job of capturing the dependence structure in the true evaluation set:
+But which model is better? We can compute the variogram score for out of sample forecasts to get a sense of which model does a better job of capturing the dependence structure in the true evaluation set:
 ```{r}
 # create forecast objects for each model
 fcvar <- forecast(var_mod)
@@ -551,7 +448,7 @@ Heaps, Sarah E. "[Enforcing stationarity through the prior in vector autoregress
   
 Hannaford, Naomi E., et al. "[A sparse Bayesian hierarchical vector autoregressive model for microbial dynamics in a wastewater treatment plant.](https://www.sciencedirect.com/science/article/pii/S0167947322002390)" *Computational Statistics & Data Analysis* 179 (2023): 107659.
   
-Holmes, Elizabeth E., Eric J. Ward, and Wills Kellie. "[MARSS: multivariate autoregressive state-space models for analyzing time-series data.](https://d1wqtxts1xzle7.cloudfront.net/30588864/rjournal_2012-1_holmes_et_al-libre.pdf?1391843792=&response-content-disposition=inline%3B+filename%3DMARSS_Multivariate_Autoregressive_State.pdf&Expires=1695861526&Signature=TCRXULs0mUKRM4m1pmvZxwE10bUqS6vzLcuKeUBCj57YIjx23iTxS1fEgBpV0fs2wb5XAw7ZkG84XyMaoS~vjiqZ-DpheQDHwAHpIWG-TcckHQjEjPWTNajFvAemToUdCiHnDa~yrhW9HRgXjgncdalkjzjvjT3HLSW8mcjBDhQN-WJ3MKQFSXtxoBpWfcuPYbf-HC1E1oSl7957y~w0I1gcIVdu6LHjP~CEKXa0BQzS4xuarL2nz~tHD2MverbNJYMrDGrAxIi-MX6i~lfHWuwV6UKRdoOZ0pXIcMYWBTv9V5xYey76aMKTICiJ~0NqXLZdXO5qlS4~~2nFEO7b7w__&Key-Pair-Id=APKAJLOHF5GGSLRBV4ZA)" *R Journal*. 4.1 (2012): 11.
+Holmes, Elizabeth E., Eric J. Ward, and Wills Kellie. "[MARSS: multivariate autoregressive state-space models for analyzing time-series data.](https://journal.r-project.org/archive/2012/RJ-2012-002/index.html)" *R Journal*. 4.1 (2012): 11.
   
 Ward, Eric J., et al. "[Inferring spatial structure from time‐series data: using multivariate state‐space models to detect metapopulation structure of California sea lions in the Gulf of California, Mexico.](https://besjournals.onlinelibrary.wiley.com/doi/full/10.1111/j.1365-2664.2009.01745.x)" *Journal of Applied Ecology* 47.1 (2010): 47-56.
   
